dark mode fixes on buttons and landing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,8 +10,8 @@
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 162 100% 25%;  /* #008060 */
-    --primary-foreground: 355.7 100% 97.3%;
+    --primary: #00ac48;
+    --primary-foreground: #FFFFFF;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
@@ -33,8 +33,8 @@
     --card-foreground: 0 0% 95%;
     --popover: 0 0% 9%;
     --popover-foreground: 0 0% 95%;
-    --primary: 162 100% 25%;  /* #008060 */
-    --primary-foreground: 144.9 80.4% 10%;
+    --primary: #00ac48;
+    --primary-foreground: #FFFFFF;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 15%;
@@ -63,5 +63,6 @@
 h1#bigtitle {
   font-size: calc(16px + 4vw);
 }
+
 
 
